--- a/electron/timer.html
+++ b/electron/timer.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Timesheet</title>
+    <base href="./">
 </head>
 <body>
-    <button id="refresh-page-button">Atualizar</button>
     <div class="main-container">
         <h1>Timesheet</h1>
         <div>
@@ -38,13 +38,10 @@
     </div>
 </body>
 <footer>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="static/javascript/date_time.js"></script>
-    <script src="static/javascript/timer.js"></script>
-    <script>        
-        $('#refresh-page-button').on('click', () => {
-            location.reload(true)
-        })
+    <script>
+        let $ = require('jQuery');
     </script>
+    <script src="../static/javascript/date_time.js"></script>
+    <script src="../static/javascript/timer.js"></script>
 </footer>
 </html>
