--- a/timer.html
+++ b/timer.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
     <title>Timesheet</title>
-    <base href="./">
 </head>
 <body>
     <div class="main-container">
@@ -41,7 +40,7 @@
     <script>
         let $ = require('jQuery');
     </script>
-    <script src="../static/javascript/date_time.js"></script>
-    <script src="../static/javascript/timer.js"></script>
+    <script src="./static/javascript/date_time.js"></script>
+    <script src="./static/javascript/timer.js"></script>
 </footer>
 </html>
