added notification resource

--- a/timer.html
+++ b/timer.html
@@ -42,5 +42,6 @@
     </script>
     <script src="./static/javascript/date_time.js"></script>
     <script src="./static/javascript/timer.js"></script>
+    <script src="./static/javascript/notification.js"></script>
 </footer>
 </html>
